--- a/ECDatabaseEngine/ECDatabaseEngine.csproj
+++ b/ECDatabaseEngine/ECDatabaseEngine.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DatabaseImplementations\ECMySQLConnection.cs" />
     <Compile Include="DatabaseImplementations\ECSqLiteConnection.cs" />
     <Compile Include="ECDatabaseConnection.cs" />
+    <Compile Include="ECExceptions.cs" />
     <Compile Include="ECTable.cs" />
     <Compile Include="IECConnection.cs" />
     <Compile Include="ECJoin.cs" />
@@ -84,6 +85,7 @@
     <None Include="packages.config" />
     <None Include="Resources\empty.db3" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.109.1\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.109.1\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
