--- a/ECDatabaseEngine/ECDatabaseEngine.csproj
+++ b/ECDatabaseEngine/ECDatabaseEngine.csproj
@@ -63,12 +63,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes.cs" />
-    <Compile Include="DatabaseImplementations\ECMySQLConnection.cs" />
-    <Compile Include="DatabaseImplementations\ECSqLiteConnection.cs" />
+    <Compile Include="DatabaseImplementations\ECSqlStatementBuilderBase.cs" />
+    <Compile Include="DatabaseImplementations\MySQL\ECMySQLConnection.cs" />
+    <Compile Include="DatabaseImplementations\SQLite\ECSqLiteConnection.cs" />
     <Compile Include="ECDatabaseConnection.cs" />
     <Compile Include="ECExceptions.cs" />
     <Compile Include="ECTable.cs" />
     <Compile Include="ECTableEventArgs.cs" />
+    <Compile Include="FieldTypes\ECField.cs" />
     <Compile Include="IECConnection.cs" />
     <Compile Include="ECJoin.cs" />
     <Compile Include="LibResource.Designer.cs">
@@ -82,6 +84,7 @@
     <EmbeddedResource Include="LibResource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>LibResource.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
